Documentation edits made through Mintlify web editor

--- a/nxtcore-WL1.1registrieren.mdx
+++ b/nxtcore-WL1.1registrieren.mdx
@@ -1,52 +1,106 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Registrieren"
+description: "Anleitung zum Anlegen eines Benutzeraccounts."
 ---
 
-<Accordion title="Registrierung / Benutzerkonto anlegen" icon="sparkles">
-  **Start der Registrierung durch das Klicken auf die jeweilige Schaltfläche.**\
-  _<sub>Von oben nach unten, von links nach rechts: Registrierung mit E-Mail Adresse, Google Account, </sub>_\
-  _<sub>Discord Account oder Riot Account</sub>_\
-  \
-  **Wähle die Anleitung für Schritt 1**\
-  Basierend auf die Auswahl des Accounts für die Registrierung
+## **Wähle die Anleitung für Schritt 1:**
 
-  ![Reguebersicht Pn](/images/reguebersicht.png)
+Basierend auf die Auswahl des Accounts für die Registrierung
 
-  **Bei Auswahl "Mit E-Mail Adresse" bitte direkt zu Schritt 2 - Allgemeines übergehen.**
+![Reguebersicht Pn](/images/reguebersicht.png)
 
-  <AccordionGroup>
-    <Accordion title="Registrierung über Riot Account" description="Schritt 1 - Riot Account - Login / OAuth" icon="sparkles">
-      **Eine Registrierung über einen vorhandenen Riot Account**
+_<sub>Von oben nach unten, von links nach rechts: Registrierung mit E-Mail Adresse, Google Account, Discord Account oder Riot Account.</sub>_
 
-      - Klicke hierfür auf die Schaltfläche mit dem Riot-Logo
+<AccordionGroup>
+  <Accordion title="Registrierung über Riot Account" description="Schritt 1 - Riot Account - Login / OAuth" icon="sparkles">
+    **Eine Registrierung über einen vorhandenen Riot Account**
 
-        ![Riotlogin Pn](/images/riotlogin.png)
-      - Folge der Authentifizierung über die offizielle Riot-Webseite\
-        <sup>Es werden nur die Riot ID und Rank-Informationen an uns übermittelt</sup>\
-        \
-        Ihr könnt die Richtigkeit der Webseite über Domain prüfen.\
-        [riotgames.com](http://riotgames.com) ist die offizielle Webseite von Riot Games.
+    - Klicke hierfür auf die Schaltfläche mit dem Riot-Logo
 
-        ![Riotregoauth Pn](/images/riotregoauth.png)
+      ![Riotlogin Pn](/images/riotlogin.png)
+    - Folge der Authentifizierung über die offizielle Riot-Webseite\
+      <sup>Es werden nur die Riot ID und Rank-Informationen an uns übermittelt</sup>\
+      \
+      Ihr könnt die Richtigkeit der Webseite über Domain prüfen.\
+      [riotgames.com](http://riotgames.com) ist die offizielle Webseite von Riot Games.
 
-        **Weiter geht es mit Schritt 2 - Allgemeines**
-    </Accordion>
-    <Accordion title="Registrierung über Discord Account" description="Schritt 1 - Discord Account - Login / OAuth" icon="sparkles">
-      **Eine Registrierung über einen vorhandenen Discord Account.**
-
-      - Klicke hierfür auf die Schaltfläche mit dem Discord-Logo
-
-        ![Discordlogin Pn](/images/discordlogin.png)
-      - Folge der Authentifizierung über die offizielle Discord-Webseite\
-        <sup>Es erscheint ein Popup-Fenster. Dort wird dir angezeigt, welche Daten wir erhalten.</sup>
-
-      ![Discordoauth Pn](/images/discordoauth.png)
+      ![Riotregoauth Pn](/images/riotregoauth.png)
 
       **Weiter geht es mit Schritt 2 - Allgemeines**
-    </Accordion>
-    <Accordion title="Registrierung über Google Account" description="Schritt 1 - Google Account - Login / OAuth" icon="sparkles">
-      **Funktion aktuell noch nicht verfügbar!**
-    </Accordion>
-  </AccordionGroup>
-</Accordion>
+  </Accordion>
+  <Accordion title="Registrierung über Discord Account" description="Schritt 1 - Discord Account - Login / OAuth" icon="sparkles">
+    **Eine Registrierung über einen vorhandenen Discord Account.**
+
+    - Klicke hierfür auf die Schaltfläche mit dem Discord-Logo
+
+      ![Discordlogin Pn](/images/discordlogin.png)
+    - Folge der Authentifizierung über die offizielle Discord-Webseite\
+      <sup>Es erscheint ein Popup-Fenster. Dort wird dir angezeigt, welche Daten wir erhalten.</sup>
+
+    ![Discordoauth Pn](/images/discordoauth.png)
+
+    **Weiter geht es mit Schritt 2 - Allgemeines**
+  </Accordion>
+  <Accordion title="Registrierung über Google Account" description="Schritt 1 - Google Account - Login / OAuth" icon="sparkles">
+    **Funktion aktuell noch nicht verfügbar\!**
+  </Accordion>
+</AccordionGroup>
+
+## Schritt 2
+
+Allgemeine Angaben zur Registrierung
+
+**Folgende Schritte sind bei Angabe von allgemeinen Informationen notwendig:**
+
+- Gültige E-Mailadresse angeben\
+  <sup>Bei Registrierung über ein Discord-, Riot- oder Google-Konto wird diese Information automatisch gezogen.</sup>
+- Passwort nach Passwortrichtlinien eingeben\
+  <sup>Passwortrichtlinien stehen unter der Passworteingabe</sup>
+- Passworteingabe wiederholen\
+  <sup>So wird eine Falscheingabe verhindert</sup>
+- Nutzungsbedingungen akzeptieren \
+  <sup>Die Nutzungsbedingungen können auf der jeweiligen Seite eingesehen werden</sup>
+- Datenschutzerklärung akzeptieren\
+  <sup>Die Datenschutzerklärung kann auf der jeweiligen Seite eingesehen werden</sup>
+- Nachrichten zu Neuigkeiten aktivieren\
+  <sup>Ist eine Optionale und freiwillige Funktion und kann jederzeit widerufen werden</sup>
+- Im Registrierungsprozess Fortfahren durch den Klick auf "Weiter"
+
+  ![Regallgemeines Pn](/images/regallgemeines.png)
+
+## Schritt 3
+
+Zusatzangaben zur Registrierung
+
+**Angabe von benutzerrelevanten Zusatzdaten:**\
+Alle Angaben sind Pflichtfelder.
+
+- Benutzername
+- Vorname
+- Nachname
+- Geschlecht
+- Geburtstag
+- Land\
+  <sup>Herkunftsland / Land in dem du lebst bzw. Nationalität</sup>
+
+Im Registrierungsprozess Fortfahren durch den Klick auf "Weiter"
+
+![Zusatzdaten Pn](/images/zusatzdaten.png)
+
+## **Schritt 4**
+
+Abschluss der Registrierung\
+\
+**Abschließen der Registrierung und Bestätigen der E-Mail**\
+Aktivierungslink folgt per E-Mail.
+
+Beenden der Registrierung durch klicken auf die Schaltfläche "Weiter"
+
+![download.png](/images/download.png)
+
+Im Anschluss wird eine E-Mail mit einem Bestätigungslink versendet.\
+Dieser Link muss angeklickt und die E-Mailadresse somit bestätigt werden
+
+![Emailbestaetigen Pn](/images/emailbestaetigen.png)
+
+**Registrierung ist somit abgeschlossen.**
