Documentation edits made through Mintlify web editor

--- a/nxtcore-WL2.1navigationturnierseite.mdx
+++ b/nxtcore-WL2.1navigationturnierseite.mdx
@@ -19,7 +19,7 @@ Durch das herunterscrollen auf der Seite, können diverse Turniere gefunden werd
 
 ![Navmenue Pn](/images/navmenue.png)
 
-## <Icon icon="arrow-down" iconType="regular" size={30} /><Icon icon="arrow-down" size={30} /> Scrolle nach unten um anstehende Events zu finden. <Icon icon="arrow-down" size={30} /><Icon icon="arrow-down" size={30} />
+## <Icon icon="arrow-down" iconType="regular" size={30} />Scrolle nach unten um anstehende Events zu finden. <Icon icon="arrow-down" size={30} />
 
 ![Scrolldownfrontpage Pn](/images/scrolldownfrontpage.png)
 
