Documentation edits made through Mintlify web editor

--- a/nxtcore-WLadmin.mdx
+++ b/nxtcore-WLadmin.mdx
@@ -17,7 +17,7 @@ description: "Beschreibung aller Funktionen in der Admin-Oberfläche."
       In diesem Menü können Avatardekorationen angelegt werden.
     </Accordion>
     <Accordion title="Badges" description="Beschreibung aller Funktionen in diesem Menü." icon="award-simple">
-      Über das Menü "Badges" können Icons oder Bilder hochgeladen werden, welche, nachdem Sie einem User zugewiesen wurden, in dem jeweiligen User-Profil zu sehen sind.\
+      Über das Menü "Badges" können Icons oder Bilder hochgeladen werden, welche, erlinkung gelöscht werden.nachdem Sie einem User zugewiesen wurden, in dem jeweiligen User-Profil zu sehen sind.\
       \
       Beispiel: Baum auf blauem Hintergrund\
       <sup>(grüner Pfeil markiert das Beispiel)</sup>\
