Documentation edits made through Mintlify web editor

--- a/nxtcore-WL3.2.2badges.mdx
+++ b/nxtcore-WL3.2.2badges.mdx
@@ -15,7 +15,13 @@ Beispiel: Baum auf blauem Hintergrund\
 \
 <Icon icon="circle-info" size={20} /> **Der blaue Hintergrund ist vorhanden, da der Baum selbst keinen eigenen Hintergrund hat.**
 
-![Badgesbeispiel Pn](/images/badgesbeispiel.png)
+<img
+  src="/images/badgesbeispiel.png"
+  alt="Badgesbeispiel Pn"
+  style={{ width:"100%" }}
+/>
+
+  
 
 <Card title="Neues Badge erstellen" icon="award-simple" horizontal>
   Hier eine Anleitung zum erstellen von neuen Badges.
