Documentation edits made through Mintlify web editor

--- a/nxtcore-WL3.2.3connections.mdx
+++ b/nxtcore-WL3.2.3connections.mdx
@@ -1,5 +1,21 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Connections"
+description: "Beschreibung aller Funktionen in diesem Menü."
 ---
 
+<Card title="Connections" icon="code-simple" iconType="regular" horizontal>
+  
+</Card>
+
+\
+Über das Menü "Connections" können Verknüpfungen angelegt werden.\
+User können Ihre Accounts dann entsprechend mit Ihrem Account auf [die-werksliga.de](http://die-werksliga.de) verlinken.\
+\
+Das Anlegen dieser Verbindungen ist aktuell (aus Sicherheitsgründen) nur dem Developer-Team von nxtcore möglich.
+
+![Connectionsoverview Pn](/images/connectionsoverview.png)
+
+Für die User sieht diese Übersicht der "Verbindungen" in Ihrem Profil unter \
+-\> Profil -\> Verbindungen wie folgt aus:
+
+![Connectionsfrontpage Pn](/images/connectionsfrontpage.png)
