Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -11,10 +11,10 @@ Alle Funktionen werden ausführlich erklärt und beschrieben.
 
 <CardGroup cols={2}>
   <Card title="Inhaltsverzeichnis" icon="list" horizontal href="/inhaltsverzeichnis">
-    Alle Funktionen sind im jeweiligen Abschnitt. Das erleichtert die Suche diverser Funktionen.
+    Alle Funktionen sind im jeweiligen Abschnitt. 
   </Card>
   <Card title="Suchfunktion" icon="magnifying-glass" horizontal>
-    Es kann zusätzlich die Suchfunktion zum Suchen von spezifischen Angaben in der Dokumentation genutzt werden.
+    Finde was du suchst schneller und effizienter
   </Card>
 </CardGroup>
 
