--- a/nxtcore-WL1.1registrieren.mdx
+++ b/nxtcore-WL1.1registrieren.mdx
@@ -12,7 +12,7 @@ Basierend auf die Auswahl des Accounts für die Registrierung
 _<sub>Von oben nach unten, von links nach rechts: Registrierung mit E-Mail Adresse, Google Account, Discord Account oder Riot Account.</sub>_
 
 <AccordionGroup>
-  <Accordion title="Registrierung über Riot Account" description="Schritt 1 - Riot Account - Login / OAuth" icon="sparkles">
+  <Accordion title="Registrierung über Riot Account" description="Riot Account - Login / OAuth" icon="sparkles">
     **Eine Registrierung über einen vorhandenen Riot Account**
 
     - Klicke hierfür auf die Schaltfläche mit dem Riot-Logo
@@ -28,7 +28,7 @@ _<sub>Von oben nach unten, von links nach rechts: Registrierung mit E-Mail Adres
 
       **Weiter geht es mit Schritt 2 - Allgemeines**
   </Accordion>
-  <Accordion title="Registrierung über Discord Account" description="Schritt 1 - Discord Account - Login / OAuth" icon="sparkles">
+  <Accordion title="Registrierung über Discord Account" description="Discord Account - Login / OAuth" icon="sparkles">
     **Eine Registrierung über einen vorhandenen Discord Account.**
 
     - Klicke hierfür auf die Schaltfläche mit dem Discord-Logo
@@ -41,8 +41,8 @@ _<sub>Von oben nach unten, von links nach rechts: Registrierung mit E-Mail Adres
 
     **Weiter geht es mit Schritt 2 - Allgemeines**
   </Accordion>
-  <Accordion title="Registrierung über Google Account" description="Schritt 1 - Google Account - Login / OAuth" icon="sparkles">
-    **Funktion aktuell noch nicht verfügbar\!**
+  <Accordion title="Registrierung über Google Account" description="Google Account - Login / OAuth" icon="sparkles">
+    **Funktion aktuell noch nicht verfügbar!**
   </Accordion>
 </AccordionGroup>
 
@@ -53,11 +53,10 @@ Allgemeine Angaben zur Registrierung
 **Folgende Schritte sind bei Angabe von allgemeinen Informationen notwendig:**
 
 - Gültige E-Mailadresse angeben\
-  <sup>Bei Registrierung über ein Discord-, Riot- oder Google-Konto wird diese Information automatisch gezogen.</sup>
+  <sup>Bei Registrierung über ein Discord-, Riot- oder Google-Konto wird diese Information automatisch gesetzt.</sup>
 - Passwort nach Passwortrichtlinien eingeben\
   <sup>Passwortrichtlinien stehen unter der Passworteingabe</sup>
-- Passworteingabe wiederholen\
-  <sup>So wird eine Falscheingabe verhindert</sup>
+- Passworteingabe wiederholen
 - Nutzungsbedingungen akzeptieren \
   <sup>Die Nutzungsbedingungen können auf der jeweiligen Seite eingesehen werden</sup>
 - Datenschutzerklärung akzeptieren\
