--- a/nxtcore-WL1.2login.mdx
+++ b/nxtcore-WL1.2login.mdx
@@ -5,7 +5,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
 
 **Erklärung der einzelnen Möglichkeiten zur Bearbeitung des Benutzerkontos**
 
-<Accordion title="Login" description="Erklärung zum EInloggen in das Benutzerkonto." icon="sparkles">
+<Accordion title="Login" description="Erklärung zum Einloggen in das Benutzerkonto." icon="sparkles">
   Der Login ist möglich mit:
 
   - E-Mail Adresse
@@ -61,7 +61,7 @@ Die hier zusehenden Tabs sind auch im Profil vorhanden.
       Aber auch das erneute versenden einer Verifizierungsmail, sollte diese im Postfach nicht angekommen sein. **Bitte auch in den Spam-Ordner schauen.**
 
       ![Benutzerkonto Email Pn](/images/benutzerkonto-email.png)
-    - \*\*Speichern: \*\*Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
+    - **Speichern: **Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
 
       ![Benutzerkonto Aenderungspeichern Pn](/images/benutzerkonto-aenderungspeichern.png)
   </Tab>
@@ -109,7 +109,7 @@ Die hier zusehenden Tabs sind auch im Profil vorhanden.
 
           - **<u>Team über die "Suche"-Leiste suchen:</u>**\
             Hier kann ein Teil des Namen oder der Name als Ganzes eingegeben werden.\
-            Sobald eine Eingabe erfolgt ist, aktuallisiert sich die Liste innerhalb von wenigen Sekunden. **Die Eingabe muss NICHT mit Enter bestätigt werden\!**
+            Sobald eine Eingabe erfolgt ist, aktuallisiert sich die Liste innerhalb von wenigen Sekunden. **Die Eingabe muss NICHT mit Enter bestätigt werden!**
           - **<u>Team durch das Scrollen in der Liste suchen:</u>**\
             Die Teamliste lässt sich auch durch Scrollen mit dem Mausrad nach oben oder unten durchsuchen.
 
