--- a/nxtcore-WL3.2.1avatardekoration.mdx
+++ b/nxtcore-WL3.2.1avatardekoration.mdx
@@ -4,3 +4,25 @@ description: "Beschreibung aller Funktionen in diesem Menü."
 ---
 
 In diesem Menü können Avatardekorationen angelegt werden.
+
+<Warning>
+  Diese Funktion ist Standardmäßig nicht für jede Instanz freigeschaltet und wird nur auf Anfrage entwickelt & freigeschaltetg
+</Warning>
+
+<Tabs>
+  <Tab title="Übersicht">
+    <img
+      src="/images/image-1.png"
+      alt="Image"
+      title="Image"
+      className="mr-auto"
+      style={{ width:"100%" }}
+    />
+  </Tab>
+  <Tab title="Erstellen">
+    
+  </Tab>
+  <Tab title="Bearbeiten">
+    
+  </Tab>
+</Tabs>
